# enigma

./: Cargo.toml  memory.x
dsp/: .gitignore  Cargo.toml
dsp/src/: lib.rs  phasor.rs  resonator.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs
firmware/src/dsp/: mod.rs  resonator.rs
firmware/src/system/: cv.rs  debounce.rs  mod.rs
src/: consts.rs  lib.rs
src/dsp/: debounce.rs  filter.rs  mod.rs  phasor.rs
src/system/: cv.rs  mod.rs
